第二十一次修改

--- a/templates/relation_extract.html
+++ b/templates/relation_extract.html
@@ -106,8 +106,8 @@
                             {% csrf_token %}
                             <br>
                             <div align="center">
-                            <textarea name="user_text" rows="10" cols="110"
-                                      placeholder="请输入：">{{ new_data }}</textarea>
+                                <textarea name="user_text" rows="10" cols="110"
+                                      placeholder="请输入：">{{ str }}</textarea>
                             </div>
                             <br>
 
