--- a/templates/text_annotation.html
+++ b/templates/text_annotation.html
@@ -112,7 +112,7 @@
                         {% csrf_token %}
                         <br/>
                         <div align="center">
-                            <button type="submit" class="btn-warning" name="next" style="font-size:18px;">Next message to be marked
+                            <button type="submit" class="btn-warning" name="next" style="font-size:18px;">下一条
                             </button>
                             <br/>
                         </div>
@@ -176,7 +176,7 @@
                     <form name="data" method="post" action="/text_annotation/">
                         {% csrf_token %}
                         <div align="center">
-                            <button type="submit" class="btn-warning" name="next" style="font-size:18px;">Start tagging</button>
+                            <button type="submit" class="btn-warning" name="next" style="font-size:18px;">开始标注</button>
                         </div>
                     </form>
                 </div>
