--- a/templates/d2rq.html
+++ b/templates/d2rq.html
@@ -28,7 +28,7 @@
             <div class="col-md-12">
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
-                    <li><i class="fa fa-link" aria-hidden="true"></i>DB抽取</li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>DB关系抽取</li>
                 </ol>
             </div>
             {% if tableList == null and database == null %}
