--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,13 +1,67 @@
 {% extends 'index.html' %}
 {% block en %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>问答系统页面</title>
-</head>
-<body>
-<h1>问答系统页面-测试</h1>
+    {% load pagination_tags %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>问答系统</title>
+        <link href="/static/css/style.css" rel="stylesheet">
+        <link href="/static/css/elegant-icons-style.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="/static/css/bootstrap.css"/>
+        <link rel="stylesheet" href="/static/css/style2.css"/>
+
+        <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+        <script src="/static/js/echarts.common.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
+    </head>
+    <body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <ol class="breadcrumb">
+                    <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>问答系统</li>
+                </ol>
+            </div>
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <header class="panel-heading">
+                        *****：
+                    </header>
+                    <div class="panel-body" style="text-align: center">
+                        <form name="download" enctype="multipart/form-data" method="post" action="#">
+                            {% csrf_token %}
+                            <button type="submit"
+                                    style="background-color:#8fd19e; width: 200px;height: 36px; text-align: center"
+                                    name="download">
+                                *************
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footers">
+                <span style="color: white;">© 2020 东北大学-数字线技术项目团队 版权所有</span>
+            </div>
+        </div>
+    </div>
+
+    {% if messages %}
+        <script>
+            {% for msg in messages %}
+                alert('{{ msg.message }}');
+            {% endfor %}
+        </script>
+    {% endif %}
 </body>
 </html>
 {% endblock en %}
