--- a/templates/data_manager.html
+++ b/templates/data_manager.html
@@ -28,7 +28,7 @@
             <div class="col-md-12">
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
-                    <li><i class="fa fa-link" aria-hidden="true"></i>数据管理</li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>知识存储</li>
                 </ol>
             </div>
 
