--- a/templates/login.html
+++ b/templates/login.html
@@ -13,15 +13,15 @@
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body style="background: #fff url(/static/img/back.jpg)  0 no-repeat; ">
 
 <!-- 使用自定义css样式 div-signin 完成元素居中-->
 <div class="container div-signin" style="width: 800px; top: 300px">
     <div class="panel panel-primary div-shadow">
         <!-- h3标签加载自定义样式，完成文字居中和上下间距调整 -->
         <div class="panel-heading">
-            <h3>基于Django的航空领域知识图谱管理系统 V1.0</h3>
-            <span>Knowledge Map Management System of Aviation Field Based on Django V1.0</span>
+            <h3>航空领域知识图谱管理系统 V1.0</h3>
+            <span>Knowledge Map Management System of Aviation Field V1.0</span>
         </div>
         <div class="panel-body" style="width: 800px">
             <!-- login form start -->
