--- a/templates/relation_extract.html
+++ b/templates/relation_extract.html
@@ -68,7 +68,7 @@
             <div class="col-md-12">
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
-                    <li><i class="fa fa-link" aria-hidden="true"></i>关系抽取</li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>文本关系抽取</li>
                 </ol>
             </div>
             <div class="col-md-12">
@@ -106,7 +106,7 @@
                             {% csrf_token %}
                             <br>
                             <div align="center">
-                                <textarea name="user_text" rows="10" cols="110"
+                                <textarea name="user_text" rows="10" cols="150"
                                       placeholder="请输入：">{{ str }}</textarea>
                             </div>
                             <br>
