--- a/templates/relation_search.html
+++ b/templates/relation_search.html
@@ -27,10 +27,9 @@
             <div class="col-md-12">
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
-                    <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>知识查询</li>
                 </ol>
             </div>
-
 
             <div class="col-md-12">
                 <div class="panel panel-default">
