--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>基于Django的航空领域知识图谱</title>
+    <title>航空领域知识图谱</title>
 
     <link rel="shortcut icon" href="/static/img/favicon.png">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         </div>
 
         <!--logo start-->
-        <a href="#" class="logo" style="font-size:25px;"> 基于Django的航空领域知识图谱 V1.0</a>
+        <a href="#" class="logo" style="font-size:25px;"> 航空领域知识图谱 V1.0</a>
         <!--logo end-->
         <div class="top-nav notification-row">
             <ul class="nav pull-right top-menu">
