--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,12 @@
                                 <span style="font-size:22px;">DB关系抽取</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="http://127.0.0.1:8001/toExcel/">
+                                <i class="icon-pages-l"></i>
+                                <span style="font-size:22px;">Excel抽取</span>
+                            </a>
+                        </li>
 
 
                     </ul>
