--- a/templates/excel.html
+++ b/templates/excel.html
@@ -1,83 +1,102 @@
 {% extends 'index.html' %}
+<!DOCTYPE html>
 {% block en %}
-    <!DOCTYPE html>
     <html lang="en">
     <head>
         <title>##</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/static/css/style.css" rel="stylesheet">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="/static/css/bootstrap.css"/>
         <link rel="stylesheet" href="/static/css/style2.css"/>
-        <link rel="stylesheet" href="/static/css/excel_css.css">
+        <link rel="stylesheet" href="/static/css/ner.css"/>
 
         <script type="text/javascript" src="/static/js/jquery.min.js"></script>
         <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/static/js/jquery-1.8.3.min.js"></script>
 
-        <script type="text/javascript">
-            $(function () {
-                //移到左边
-                $('#add').click(function () {
-                    //先判断是否有选中
-                    if (!$("#select1 option").is(":selected")) {
-                        alert("请选择需要移动的选项")
-                    }
-                    //获取选中的选项，删除并追加给对方
-                    else {
-                        $('#select1 option:selected').appendTo('#select2');
-                    }
-                });
+        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <style>
+            .file input {
+                position: absolute;
+                font-size: 100px;
+                right: 0;
+                top: 0;
+                opacity: 0;
+            }
 
-                //移到右边
-                $('#remove').click(function () {
-                    //先判断是否有选中
-                    if (!$("#select2 option").is(":selected")) {
-                        alert("请选择需要移动的选项")
-                    } else {
-                        $('#select2 option:selected').appendTo('#select1');
-                    }
-                });
+            input[type="checkbox"] {
+                -webkit-appearance: none;
+                vertical-align: middle;
+                margin-top: 0;
+                background: #fff;
+                border: #999 solid 1px;
+                border-radius: 3px;
+                min-height: 12px;
+                min-width: 12px;
+            }
 
+            input[type="checkbox"]:checked {
+                background: #3190e8;
+            }
 
-                //移到左边
-                $('#add2').click(function () {
-                    //先判断是否有选中
-                    if (!$("#select1 option").is(":selected")) {
-                        alert("请选择需要移动的选项")
-                    }
-                    //获取选中的选项，删除并追加给对方
-                    else {
-                        $('#select1 option:selected').appendTo('#select3');
-                    }
-                });
-
-                //移到右边
-                $('#remove2').click(function () {
-                    //先判断是否有选中
-                    if (!$("#select3 option").is(":selected")) {
-                        alert("请选择需要移动的选项")
-                    } else {
-                        $('#select3 option:selected').appendTo('#select1');
-                    }
-                });
+            input[type="checkbox"]:checked::after {
+                content: '';
+                top: 3px;
+                left: 3px;
+                position: absolute;
+                background: transparent;
+                border: #fff solid 2px;
+                border-top: none;
+                border-right: none;
+                height: 6px;
+                width: 10px;
+                -moz-transform: rotate(-45deg);
+                -ms-transform: rotate(-45deg);
+                -webkit-transform: rotate(-45deg);
+                transform: rotate(-45deg);
+            }
 
 
-                //双击选项
-                $('#select2').dblclick(function () {
-                    $("option:selected", this).appendTo('#select1');
-                });
+            .selectbox {
+                width: 1000px;
+                height: 220px;
+                margin: 20px auto;
+            }
 
+            .selectbox div {
+                float: left;
+            }
 
-                //双击选项
-                $('#select3').dblclick(function () {
-                    $("option:selected", this).appendTo('#select1');
-                });
+            .selectbox .select-bar {
+                padding: 0 20px;
+            }
 
-            });
-        </script>
+            .selectbox .select-bar select {
+                width: 200px;
+                height: 200px;
+                border: 1px #A0A0A4 solid;
+                padding: 4px;
+                font-size: 14px;
+            }
+
+            .btn-bar {
+
+            }
+
+            .btn-bar p {
+                margin-top: 40px;
+            }
+
+            .btn-bar p .btn {
+                width: 50px;
+                height: 30px;
+                cursor: pointer;
+                font-size: 14px;
+            }
+        </style>
     </head>
     <body>
 
@@ -232,9 +251,68 @@
         </div>
     </div>
 
-    <script type="text/javascript">
+    <script>
         $('input[id=file]').change(function () {
             $('#photoCover').val($(this).val());
+        });
+        $(function () {
+            //移到左边
+            $('#add').click(function () {
+                //先判断是否有选中
+                if (!$("#select1 option").is(":selected")) {
+                    alert("请选择需要移动的选项")
+                }
+                //获取选中的选项，删除并追加给对方
+                else {
+                    $('#select1 option:selected').appendTo('#select2');
+                }
+            });
+
+            //移到右边
+            $('#remove').click(function () {
+                //先判断是否有选中
+                if (!$("#select2 option").is(":selected")) {
+                    alert("请选择需要移动的选项")
+                } else {
+                    $('#select2 option:selected').appendTo('#select1');
+                }
+            });
+
+
+            //移到左边
+            $('#add2').click(function () {
+                //先判断是否有选中
+                if (!$("#select1 option").is(":selected")) {
+                    alert("请选择需要移动的选项")
+                }
+                //获取选中的选项，删除并追加给对方
+                else {
+                    $('#select1 option:selected').appendTo('#select3');
+                }
+            });
+
+            //移到右边
+            $('#remove2').click(function () {
+                //先判断是否有选中
+                if (!$("#select3 option").is(":selected")) {
+                    alert("请选择需要移动的选项")
+                } else {
+                    $('#select3 option:selected').appendTo('#select1');
+                }
+            });
+
+
+            //双击选项
+            $('#select2').dblclick(function () {
+                $("option:selected", this).appendTo('#select1');
+            });
+
+
+            //双击选项
+            $('#select3').dblclick(function () {
+                $("option:selected", this).appendTo('#select1');
+            });
+
         });
     </script>
     </body>
