--- a/templates/relation_extract.html
+++ b/templates/relation_extract.html
@@ -139,7 +139,6 @@
                                         <th align="center" width="150" class="text-center">尾实体类型</th>
 
                                         <th align="center" width="100" class="text-center">关系类别</th>
-                                        <th align="center" width="400" class="text-center">所在文本</th>
 
                                         <th align="center" width="200" class="text-center">用户操作</th>
                                     </tr>
@@ -149,14 +148,13 @@
                                     {% for list in resultList %}
                                         <tr>
 
-                                            <td align="center">{{ list.headEntity }}</td>
-                                            <td align="center">{{ list.headEntityType }}</td>
+                                            <td align="center">{{ list.1 }}</td>
+                                            <td align="center">{{ list.2 }}</td>
 
-                                            <td align="center">{{ list.tailEntity }}</td>
-                                            <td align="center">{{ list.tailEntityType }}</td>
+                                            <td align="center">{{ list.3 }}</td>
+                                            <td align="center">{{ list.4 }}</td>
 
-                                            <td align="center">{{ list.relationshipCategory }}</td>
-                                            <td align="center">{{ list.text }}</td>
+                                            <td align="center">{{ list.5 }}</td>
 
 
                                             <td class="text-center">
@@ -165,14 +163,14 @@
                                                        data-toggle="modal"
                                                        data-target="#myModal" value="修改"
                                                        onclick="
-                                                               document.getElementById('rel_id').value='{{ list.rel_id }}';
-                                                               document.getElementById('headEntity').value='{{ list.headEntity }}';
-                                                               document.getElementById('headEntityType').value='{{ list.headEntityType }}';
-                                                               document.getElementById('tailEntity').value='{{ list.tailEntity }}';
-                                                               document.getElementById('tailEntityType').value='{{ list.tailEntityType }}';
-                                                               document.getElementById('relationshipCategory').value='{{ list.relationshipCategory }}';
-                                                               document.getElementById('text').value='{{ list.text }}';">
-                                                <a href="{% url 'deleteRel' %}?rel_id={{ list.rel_id }}">
+                                                               document.getElementById('rel_id').value='{{ list.0 }}';
+                                                               document.getElementById('headEntity').value='{{ list.1 }}';
+                                                               document.getElementById('headEntityType').value='{{ list.2 }}';
+                                                               document.getElementById('tailEntity').value='{{ list.3 }}';
+                                                               document.getElementById('tailEntityType').value='{{ list.4 }}';
+                                                               document.getElementById('relationshipCategory').value='{{ list.5 }}';
+                                                               ">
+                                                <a href="{% url 'deleteRel' %}?rel_id={{ list.0 }}">
                                                     <button class="btn btn-danger" type="button"
                                                             onclick="return confirm('是否确认删除？');">
                                                         <span class="glyphicon glyphicon-remove"
